welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:10: error: not found: value b
  b = a;
  ^lastDigit:11: error: not found: value b
  while( b%10 != 10){
         ^lastDigit:12: error: not found: value b
    b = b%10;
    ^lastDigit:14: error: not found: value b
  return b;
         ^