welcome.lessons.welcome.bat.bool1.LastDigit.scala.code
def lastDigit(a:Int, b:Int):Boolean = {
  if ( chiffre(a) == chiffre(b) ){
    return true;
  } else {
    return false;
  }
}
  
def chiffre(a:Int): Int ={
  b = a;
  while( b%10 != 10){
    b = b%10;
  }
  return b;
}